v1.7.6

- New options to estimate cross-gains from station metadata (pcals).
- New configuration keywords to fine-tune non-ALMA cases (VGOS).
- Synchronized with DiFX 2.5.3 PP scripting for 2018

v1.7.5

- set zero weight on unphased APP subscans (phases not updated)
- continued non-ALMA development

v1.7.4

- Added some protections for problematic antennas in ALMA data tables
- Support for polarized calibrators (for non-ALMA observations).

v1.7.3

- minor bug fixes

v1.5 - v1.7

- antab for ALMA is now correct; missing cross-pol autocors for ALMA now fixed
- general expansion of capabilities in response to EHT issues and
- partial support for non-ALMA linear pol sites (EVN, &c.)
- autocrosscorrs now fixed (for GMVA)

v1.4

- Bandpass mode for the cross-polarization gains.
- Parallactic-angle computation (to enable the use of RR and LL in the X-Y gain estimate).
- Global Cross-Polarization Fringe Fitting, to find X-Y gains.
- New C++ module to solve for gains.

v1.3

- Returns cross-polarization gains in a list (to apply them to XYadd and XYratio).
- Estimate (and application) of multi-band delay

v1.2-r7

- Gain files in ANTAB format.
- Proper handling (by interpolation) of flagged gains.

v1.2-r8

- changes for cleaner compilation
- adjustments to task_polconvert.py for shape variations in cal tables

v1.2-r9

- Corrected bug in CalTable.
- Automatic selection of spw (if spw is set to <0 ).

v1.2-r10

- Several IFs can be plotted at once.
- Added plot of amplitude vs. IF number.
- Added "self" interpolation (useful for amplitude solutions).
- Plots and diagnostic files are now saved in directories.

v1.2-r11
- Added XYratio
- Added ability to drop XY phase solution

v1.2-r12
- Plots are generated in off-line mode.

v1.2-r13
- Modified for CASA 4.7

TODO: 

- Fitting of XY-phase with a simple delay model (per subband).
- BETTER LEAST-SQUARES MINIMIZER FOR THE CROSS-POLARIZATION GAIN ESTIMATES.